[tool.poetry]
name = "mypkg"
version = "0"
description = "mypkg"
authors = ["Dimitrios Bariamis"]
license = "MIT License"
classifiers = [
    "Programming Language :: Python :: 3.8"
]
packages = [
    { include = "mypkg", from = "source" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {version = "^6.3.2", extras = ["toml"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
ignore_errors = true
